tests/core/snapshots/graphql-conformance-014.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "operation getUser is defined twice",
        "locations": [
          {
            "line": 8,
            "column": 1
          },
          {
            "line": 1,
            "column": 1
          }
        ]
      }
    ]
  }
}
