tests/core/snapshots/graphql-conformance-014.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user(id: ID!): User!
}

type User {
  city: String
  id: ID!
  name: String!
}

schema {
  query: Query
}
