tests/core/snapshots/graphql-conformance-015.md_10.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Argument `size` for field `profilePic` is required"
      }
    ]
  }
}
